--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
         <meta charset="utf-8"/>
-        <title>BUM - Automated Trading Machine</title>
+        <title>BUM</title>
         <meta content="$BUM if the ecosystem token for the MARS ecosystem on Solana." name="description"/>
-        <meta content="BUM - Automated Trading Machine" property="og:title"/>
+        <meta content="BUM" property="og:title"/>
         <meta content="$BUM if the ecosystem token for the MARS ecosystem on Solana." property="og:description"/>
-        <meta content="https://cdn.prod.website-files.com/6733007aeb4a9195aace85a4/67341d383e8468a0b66d5fdb_2024-11-12%2020.29.42.jpg" property="og:image"/>
-        <meta content="BUM - Automated Trading Machine" property="twitter:title"/>
-        <meta content="$BUM if the ecosystem token for the MARS ecosystem on Solana." property="twitter:description"/>
-        <meta content="https://cdn.prod.website-files.com/6733007aeb4a9195aace85a4/67341d383e8468a0b66d5fdb_2024-11-12%2020.29.42.jpg" property="twitter:image"/>
+        <meta content="background.webp" property="og:image"/>
+        <meta content="BUM" property="twitter:title"/>
+        <meta content="$BUM - Buy Bum if you believe." property="twitter:description"/>
+        <meta content="background.webp" property="twitter:image"/>
         <meta property="og:type" content="website"/>
         <meta content="summary_large_image" name="twitter:card"/>
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
@@ -68,7 +68,7 @@
                       
                         <div class="split-content header-left">
                             <div class="button-primary-gradient header-button">
-                                <a href="https://firstledger.net/token/r3NBDMDuAWL1GzpMssVwMm7FQK7gYZ5Aza/BUM" class="button-primary small-v2 w-button">BUY $BUM</a>
+                                <a href="https://firstledger.net/token/rHvKWe58rfrsfoaWPvzcc2nWFiYsV1GhfX/BUM" class="button-primary small-v2 w-button">BUY $BUM</a>
                             </div>
                             <div class="menu-button w-nav-button">
                                 <div class="header-menu-button-icon-wrapper">
@@ -106,7 +106,7 @@
                         <div class="button-primary-gradient _2-buttons">
                             <a href="https://t.me/bumxrpl" class="button-primary w-button">Join the Mission</a>
                         </div>
-                        <a href="https://firstledger.net/token/r3NBDMDuAWL1GzpMssVwMm7FQK7gYZ5Aza/BUM" class="button-secondary _2-buttons w-button">Buy $BUM</a>
+                        <a href="https://firstledger.net/token/rHvKWe58rfrsfoaWPvzcc2nWFiYsV1GhfX/BUM" class="button-secondary _2-buttons w-button">Buy $BUM</a>
                     </div>
                 </div>
         
