--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <head>
     <meta charset="utf-8" />
     <title>BUM</title>
-    <meta content="$BUM if the ecosystem token for the MARS ecosystem on Solana." name="description" />
+    <meta content="$BUM is a community driven token focused on building a better future for the homeless together.." name="description" />
     <meta content="BUM" property="og:title" />
-    <meta content="$BUM if the ecosystem token for the MARS ecosystem on Solana." property="og:description" />
+    <meta content="$BUM is a community driven token focused on building a better future for the homeless together.." property="og:description" />
     <meta content="background.webp" property="og:image" />
     <meta content="BUM" property="twitter:title" />
     <meta content="$BUM - Buy Bum if you believe." property="twitter:description" />
@@ -42,9 +42,9 @@
                 ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
         }(window, document);
     </script>
-    <link href="cdn.prod.website-files.com/6733007aeb4a9195aace85a4/67332f02507e739c146d0baf_Occupy32.png"
+    <link href="image1.jpg"
         rel="shortcut icon" type="image/x-icon" />
-    <link href="cdn.prod.website-files.com/6733007aeb4a9195aace85a4/67332f52400475f23a434aef_occupy256.png"
+    <link href="image5.jpg"
         rel="apple-touch-icon" />
     <style>
         .w-webflow-badge {
